--- a/frontend/.github/workflows/ci.yml
+++ b/frontend/.github/workflows/ci.yml
@@ -1,20 +1,23 @@
-name: Ex-tracker CI/CD
+name: Ex-Tracker CI/CD
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
+
+permissions:
+  contents: write   # ✅ krävs för att pusha till gh-pages
 
 jobs:
   frontend:
-    name: Frontend CI/CD
+    name: Build Frontend
     runs-on: ubuntu-latest
+
     defaults:
       run:
-        working-directory: EX-tracker/frontend
+        working-directory: frontend
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -23,34 +26,26 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'npm'
+          cache: npm
           cache-dependency-path: frontend/package-lock.json
 
       - name: Install dependencies
-        run: |
-          cd frontend
-          npm install
-
-      - name: Lint
-        run: |
-          cd frontend
-          npm run lint
+        run: npm ci
 
       - name: Build project
-        run: |
-          cd frontend
-          npm run build
+        run: npm run build
 
-      - name: Upload build artifacts
+      - name: Upload production-ready files
         uses: actions/upload-artifact@v4
         with:
           name: frontend-dist
-          path: EX-tracker/frontend/dist
+          path: frontend/dist
 
   backend:
-    name: Backend (Node + MongoDB)
+    name: Backend Test
     runs-on: ubuntu-latest
     needs: frontend
+
     services:
       mongo:
         image: mongo:7
@@ -61,12 +56,15 @@ jobs:
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
+
     defaults:
       run:
         working-directory: backend
+
     env:
       MONGODB_URI: mongodb://localhost:27017/extracker
       PORT: 8000
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -75,27 +73,33 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'npm'
+          cache: npm
           cache-dependency-path: backend/package-lock.json
 
       - name: Install dependencies
-        run: |
-          npm install
+        run: npm ci
 
-      - name: Smoke check backend files
-        run: node -e "console.log('Backend files are present')"
+      - name: Run smoke test
+        run: node -e "console.log('✅ Backend files present and dependencies installed')"
 
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
     needs: [frontend, backend]
     if: github.ref == 'refs/heads/main'
+
     steps:
-      - name: Download frontend artifact
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Download frontend build
         uses: actions/download-artifact@v4
         with:
           name: frontend-dist
           path: dist
 
-      - name: Deploy to Vercel
-        run: npx vercel --prod --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: dist
